[package]
name = "emyu"
version = "0.1.0"
edition = "2024"
rust-version = "1.91.0"
description = "Emulator orchestrator for AI agents"
license = "MIT"
repository = "https://github.com/pleme-io/emyu"

[[bin]]
name = "emyu"
path = "src/main.rs"

[dependencies]
clap = { version = "4", features = ["derive"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
thiserror = "2"
tokio = { version = "1", features = ["full"] }

[profile.release]
codegen-units = 1
lto = true
opt-level = "z"
strip = true

[lints.clippy]
pedantic = "warn"
